# Stream2Prompt

./: .gitattributes  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yml
Model-API/Environment-Setup/: index.html
Model-API/Usage/: index.html
Model-Lab/Environment-Setup/: index.html
Model-Lab/Usage/: index.html
RPi/dockers/: docker-compose.yml
Raspi/Usage/: index.html
dockers/client/: docker-compose.yml
docs/: index.md
docs/Model-API/: Environment-Setup.md  Usage.md
docs/Model-Lab/: Environment-Setup.md  Usage.md
model-api/: model-api.py  webcam_client.py
model-lab/: model-eval.py  model-training.py
model-lab/dataset/: data.yaml
model-lab/dataset/labels/: train.cache  val.cache
model-lab/dataset/labels/test/: 20250823_180435(0).txt  20250823_180537.txt  20250823_180539(0).txt  20250823_180544.txt  20250823_180606.txt  20250823_180609.txt  20250823_180619(0).txt  20250823_180625.txt  20250823_180649.txt  20250823_180703.txt  20250823_180723.txt  20250823_180733.txt  20250823_180752.txt  20250823_180756.txt  20250823_180904.txt  20250823_180919.txt  20250823_180941.txt  20250823_181625.txt  20250823_181642.txt  20250823_181729.txt  20250823_181744.txt  20250823_181755(0).txt  20250823_181757.txt  20250823_181759.txt  20250823_181850.txt  (+131 more)
model-lab/yolo11/: best.engine
search/: search_index.json
site/: 404.html  index.html
site/Model-Lab/Environment-Setup/: index.html
site/Model-Lab/Usage/: index.html
tools/: check_cuda.py  sync2win.sh  sync2wsl.sh  time_cpu.py  time_gpu.py
(+887 files in other folders)
