[project]
name = "stream2prompt"
version = "0.1.0"
description = "ISDN3002 Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "label-studio>=1.21.0",
    "mkdocs>=1.6.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.205",
    "pillow>=10.0.0",
    "tensorrt-cu12>=10.13.3.9",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true